--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "homepage": "https://complinator.github.io",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node scripts/process-obsidian.js && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "process-content": "node scripts/process-obsidian.js",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
+    "gray-matter": "^4.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3"
